# Todo-MCP-Server

./: DEPLOYMENT.md  Dockerfile  README.md  deploy-docker.bat  deploy-docker.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_server.bat  stop-docker.bat
configs/: claude-desktop-docker.json  claude-desktop-unix.json  claude-desktop.json  nodejs-client-example.js  vscode-mcp-docker.json  vscode-mcp.json
