[project]
name = "todo-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for todo list management using FastMCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.5",
]
authors = [
    {name = "Todo MCP Server", email = "todo@example.com"},
]
keywords = ["mcp", "todo", "task", "management", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/yourusername/todo-mcp-server"
Repository = "https://github.com/yourusername/todo-mcp-server"
Issues = "https://github.com/yourusername/todo-mcp-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
todo-mcp-server = "main:main"
